style: refactor code

--- a/resources/cli.config.yaml
+++ b/resources/cli.config.yaml
@@ -52,8 +52,8 @@ meta:
 
 release:
   enabled: false
-  allowMajorTag: false
-  allowedBranches: [main]
+  releaseBranches: [main]
+  majorTagEnabled: false
 
 docker:
   composeFile: compose.yaml
