chore: rename c0rejs namespace

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "author": "root <root@softvisio.net>",
     "type": "module",
     "imports": {
-        "#core/*": "@c0rejs/core/*",
+        "#core/*": "@corejslib/core/*",
         "#lib/*": "./lib/*.js",
         "#resources/*": "./resources/*"
     },
@@ -42,8 +42,8 @@
         "test": "node --test tests/**/*.test.js"
     },
     "dependencies": {
-        "@c0rejs/core": "^7.175.0",
-        "@c0rejs/eslint-plugin": "^1.0.1",
+        "@corejslib/core": "^7.175.0",
+        "@corejslib/eslint-plugin": "^1.0.1",
         "@prettier/plugin-oxc": "^0.1.2",
         "@prettier/plugin-xml": "^3.4.1",
         "@stylistic/eslint-plugin": "^5.0.0",
