--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ],
     "scripts": {
         "install": "node bin/install.js",
-        "test": "node --test tests/**/*.test.js"
+        "test": "node --test \"tests/**/*.test.js\""
     },
     "dependencies": {
         "@corejslib/core": "^7.175.0",
